--- a/Personal details.html
+++ b/Personal details.html
@@ -9,15 +9,62 @@
 
     <p>
       Hello! My name is Sujit Chaudhari. I am a Mechanical Engineer by
-      Qualification.<br /><br />
-      <b> My qualifications are:</b><br />
-      BE Mechanical (First Class with Distinction)<br />
-      Qualified GATE (Mechanical Engineering) 2014 ME Mechanical Design
-      Engineerin I like reading non-fiction content (books, blogs, etc.). I also
-      enjoy watching Test Cricket
+      Qualification.I like reading non-fiction content (books, blogs, etc.). I
+      also enjoy watching Test Cricket<br /><br />
     </p>
+
+    <ul>
+      <b> Professional Details </b>
+      <li>Worked as Assistant Professor at PGMCOE Pune</li>
+      <li>
+        Currently working as Assistant Professor at Amrutvahini College of
+        Engineering, Sangamner
+      </li>
+      <li>
+        Taught various courses like Operation Research, Finite Element Analysis,
+        Solid Modeling & Drafting etc.
+      </li>
+    </ul>
+    <ol>
+      <b>Adacemic Credentials</b>
+      <li><b>PhD Mechanical Engineering</b> (Pursuing), University of Pune</li>
+      <li>
+        <b>ME Mechanical Design Engineering</b>(7.27 CGPA), University of Pune
+      </li>
+      <li><b>GATE 2012</b>(Qualified, 88 Percentile)</li>
+      <li>
+        <b>BE Mechanical</b>(First class with Distinction), University of Pune
+      </li>
+      <li><b>HSC</b>(69.83 %), Maharashtra State Board</li>
+      <li><b>SSC</b>(69.86 %), Maharashtra State Board</li>
+    </ol>
+
     <a href="https://www.linkedin.com/in/sujitchaudhari/" target="_blank"
       >Visit my LinkedIn Profile Here</a
     >
+    <h2>Kindly leave Feedback</h2>
+    <form action="/submit-data">
+      <label for="username"> Enter your Name </label>
+      <input
+        type="text"
+        placeholder="Please Enter your Full Name"
+        name="username"
+      />
+      <br /><br />
+      <label for="email">Email ID</label>
+      <input
+        type="email"
+        placeholder="Please enter your Email ID"
+        name="email"
+        name="email"
+      />
+      <br /><br />
+      <b>Interested in Newsletter</b> <br />
+      <label for="newsletterY">Yes</label>
+      <input type="radio" name="newsletter" value="yes" id="newsletterY" />
+      <label for="newsletterN">No</label>
+      <input type="radio" name="newsletter" value="no" id="newsletterN" /><br />
+      <button type="submit">Submit Button</button>
+    </form>
   </body>
 </html>
