--- a/Personal details.html
+++ b/Personal details.html
@@ -51,7 +51,10 @@
         name="username"
       />
       <br /><br />
-      <label for="email">Email ID</label>
+      <label for="email"
+        >Email ID &nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label
+      >
       <input
         type="email"
         placeholder="Please enter your Email ID"
