--- a/Assignment 1 - Personal details.html
+++ b/Assignment 1 - Personal details.html
@@ -62,6 +62,13 @@
         name="email"
       />
       <br /><br />
+      <label for="profile">What do you think about my profile?</label>
+      <select name="feedback" id="profile">
+        <option value="awesome">It's Awesome</option>
+        <option value="needwork">Needs more work</option>
+        <option value="helpful">Found Helpful</option>
+        <option value="recommend">Will recommend</option>
+      </select>
       <b>Interested in Newsletter</b> <br />
       <label for="newsletterY">Yes</label>
       <input type="radio" name="newsletter" value="yes" id="newsletterY" />
