--- a/Assignment 2 - Form.html
+++ b/Assignment 2 - Form.html
@@ -14,7 +14,8 @@
         name="phone"
       /><br /><br />
       <input type="text" placeholder="Website" name="website" /><br /><br />
-      <textarea cols="50" rows="3"></textarea>
+      <textarea cols="50" rows="3"></textarea><br /><br />
+      <button type="submit">Submit</button>
     </form>
   </body>
 </html>
