--- a/Assignment 2- Survey form/Assignment 2- Survey form.html
+++ b/Assignment 2- Survey form/Assignment 2- Survey form.html
@@ -18,7 +18,8 @@
 
       form {
         background-color: rgba(0, 0, 0, 0.7);
-        font-family: sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         font-size: large;
         padding-top: 34px;
         color: white;
