--- a/Assignment 3 - Web Developer/Assignment 3 - Web Developer.html
+++ b/Assignment 3 - Web Developer/Assignment 3 - Web Developer.html
@@ -59,7 +59,7 @@
       nesciunt aliquam. Repudiandae odit blanditiis necessitatibus ratione ipsam
       voluptatum et possimus rem non.
     </p>
-    <h4>Video you want to present goes here</h4>
+    <h4 class="heading">Video you want to present goes here</h4>
     <video src="video.mp4" class="media" controls></video>
     <h3>Links to help</h3>
     <p>
