--- a/Assignment 4 My Website/Assignment 4 My Website.html
+++ b/Assignment 4 My Website/Assignment 4 My Website.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      body{
+      body {
         font-family: Arial, Helvetica, sans-serif;
-        padding:0px;
-        margin:0px;
+        padding: 0px;
+        margin: 0px;
       }
       .header {
         color: white;
         background-color: teal;
         text-align: center;
-        padding: 40px;
-        margin-bottom: 0px
+        padding-top: 40px;
+        margin-bottom: 0px;
         position: relative;
-
       }
 
       .navbar {
@@ -32,8 +31,7 @@
       .navbar li {
         float: left;
         list-style: none;
-        margin: 13px 20px  ;
-
+        margin: 13px 20px;
       }
       .navbar li a {
         padding: 3px 3px;
@@ -73,15 +71,16 @@
     <div class="header">
       <h1>My Website</h1>
       <p>A <b>responsive</b> website created by me.</p>
+
+      <nav class="navbar">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-    </nav>
     <div class="grid-container">
       <div class="container1">
         <div class="text">
