--- a/Javascript Assignments/Assignment 1.html
+++ b/Javascript Assignments/Assignment 1.html
@@ -40,10 +40,32 @@
           likes: ["badminton", "chess", "travelling"],
         },
       ];
-      function checkFunction(chkProperty) {
-        return contacts.hasOwnProperty(chkProperty);
+      // console.log(contacts[0]["likes"]);
+      // console.log(contacts[0]["likes"][0]);
+
+      let keyExist;
+      let pairExists;
+      function checkObjectProperty(checkKey, checkPair) {
+        for (let i = 0; i < 5; i++) {
+          if (contacts[i]["firstName"] == checkKey) {
+            keyExist = true;
+            for (let j = 0; j < 3; j++) {
+              if (contacts[i]["likes"][j] == checkPair) {
+                pairExists = true;
+              }
+            }
+          }
+        }
+        if (keyExist && pairExists) {
+          return `${checkKey} likes ${checkPair}.`;
+        } else if (keyExist && !pairExists) {
+          return `No such property,`;
+        } else !keyExist;
+        return `No such contact.`;
       }
-      console.log(checkFunction("sujit"));
+      // console.log(checkObjectProperty("sujit", "html"));
+      // console.log(checkObjectProperty("sachin", "html"));
+      console.log(checkObjectProperty("anil", "html"));
     </script>
   </body>
 </html>
