--- a/Javascript Assignments/Assignment 1.html
+++ b/Javascript Assignments/Assignment 1.html
@@ -64,8 +64,8 @@
         return `No such contact.`;
       }
       console.log(checkObjectProperty("sujit", "html"));
-      console.log(checkObjectProperty("sachin", "html"));
-      console.log(checkObjectProperty("anil", "html"));
+      // console.log(checkObjectProperty("sachin", "html"));
+      // console.log(checkObjectProperty("anil", "html"));
 
       // when i execute the fuction once with some arguments it returns with correct results but when i execute it more than once with different arguments it returns correct results only for first arguments and next results are incorrect
     </script>
