--- a/Javascript Assignments/Assignment 2.html
+++ b/Javascript Assignments/Assignment 2.html
@@ -24,7 +24,19 @@
     <p>Random Paragraph 1</p>
     <div id="borderDiv">Random Div Tag 2</div>
     <p>Random Paragraph 2</p>
-    <a href="https://www.google.com" target="_blank">Google</a>
+    <a
+      href="https://www.google.com"
+      target="_blank"
+      style="
+        border: 1px solid rgb(76, 73, 73);
+        background-color: rgba(145, 143, 143, 0.803);
+        border-radius: 6px;
+        text-decoration: none;
+        font-family: sans-serif;
+        color: rgb(119, 22, 161);
+      "
+      >&nbsp Google &nbsp
+    </a>
     <script>
       // 1.Replace the content in document
       document.getElementById("replace").innerHTML = "Replaced Text";
